# c2pa-signer-privacy

./: .gitignore  .gitmodules  LICENSE  README.md  blog.md
bbs-signatures/: Cargo.toml  README.md
bbs-signatures/crates/c2pa-bbs-demo/: Cargo.toml
bbs-signatures/crates/c2pa-bbs-demo/resources/: demo-bbs-ca.der  demo-bbs-ca.key  demo-bbs-ca.pem  demo-bbs-ca.srl  demo-bbs-leaf.cnf  demo-bbs-leaf.csr  demo-bbs-leaf.der  demo-bbs-leaf.key  demo-bbs-leaf.pem
bbs-signatures/crates/c2pa-bbs-demo/src/: lib.rs
bbs-signatures/crates/c2pa-bbs-demo/tests/: integration.rs
bbs-signatures/docs/: bbs-c2pa-design.md
web-ui/: README.md  app.py
web-ui/static/: style.css
web-ui/templates/: base.html  index.html
web-ui/templates/bbs/: index.html  issue.html  sign.html  verify.html
web-ui/templates/zk/: anonymize.html  anonymize_progress.html  index.html  sign.html  verify.html
zk-proofs/: Cargo.toml  README.md  generate-test-assets.sh
zk-proofs/circuits/: build.sh  c2pa_signer_proof.circom  package.json  sha_bytes.circom  x509_issue_and_possession.circom  x509_parse.circom
zk-proofs/crates/c2pa-x509-zk-demo/: Cargo.toml  build.rs
zk-proofs/crates/c2pa-x509-zk-demo/resources/: chain.pem  root-ca.der  root-ca.pem  signer.der  signer.pem
zk-proofs/crates/c2pa-x509-zk-demo/src/: circuit.rs  circuit_native.rs  lib.rs  manifest.rs  types.rs
zk-proofs/crates/c2pa-x509-zk-demo/tests/: integration.rs
zk-proofs/fixtures/certs/: ca-cert.der  ca-cert.pem  ca-cert.srl  ca-key.pem  signer-cert.der  signer-cert.pem  signer-key.pem  signer.csr
